syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.routeguide";
//option java_outer_classname = "RouteGuideProto";
//option objc_class_prefix = "RTG";

package proto_config;
option csharp_namespace = "Proto.Config";

/** 
 * @exclude
 * use 'proto_' prefix for all messages !!!
 * ####################################### P A R A M E T E R S ##################################
 */
// Primary key generation strategy
// @base : ViewModelValidatableWithSeverity<IdDbGenerator, IdDbGenerator.IdDbGeneratorValidator>
message id_db_generator {
    bool_nullable is_primary_key_clustered = 10; // MsSql
    bool_nullable is_memory_optimized = 11; // MsSql
    bool_nullable is_sequence_hi_lo = 12; // SequenceHiLo or IdentityColumn. MsSql
    string hi_lo_sequence_name = 13; // MsSql
    string hi_lo_schema = 14; // MsSql
}
/** 
 * @exclude
 * ####################################### C O N F I G ##########################################
 */
message proto_group_configs {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
//  string name_ui = 4;
    string description = 5;
    repeated proto_config_tree list_configs = 6;
    string relative_config_path = 7;
}
// Configuration config
message proto_config {
    // Unique Guid for configuration (for comparison)
    string guid = 1;
    string version = 2;
    // @attr [PropertyOrderAttribute(1)]
    string name = 3;
    uint64 sorting_value = 4;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 5;
    // @attr [PropertyOrderAttribute(3)]
    string description = 6;

    // VM
    //string vm_namespace = 10;

    // CONNECTION STRING SECTION

    // if yes: 
    //    Try to find one connecion string in config file. If more than one connection string found we use use connection_string_name.
    // if no:
    //    1. Find DB type from 
    //    2. Create connection string from db_server, db_database_name, db_user
    bool is_db_from_connection_string = 11; 
    string connection_string_name = 12;
    enum EnumDbType {
        MS_SQL_SERVER = 0;
        MS_SQL_FILE = 1;
    }

    EnumDbType db_type_enum = 13;
    string db_server = 14;
    string db_database_name = 15;
    bool is_db_windows_authentication = 16; 
    string db_user = 17;
    string db_password = 18;
    // path to project with config file containing connection string. Usefull for UNIT tests.
    // it will override previous settings
    string path_to_project_with_connection_string = 19;

    // GENERAL DB SETTINGS

    string db_schema = 31;
    string primary_key_name = 32;

    // @attr [ExpandableObjectAttribute()]
    id_db_generator id_db_generator = 33;

    // CONFIG OBJECTS

    proto_group_configs group_configs = 100;
    proto_group_list_constants group_constants = 101;
    proto_group_list_enumerations group_enumerations = 102;
    proto_group_list_catalogs group_catalogs = 103;
    proto_group_documents group_documents = 104;
    proto_group_list_journals group_journals = 105;
}
message proto_config_tree {
    string guid = 1;
    string name = 2;
    uint64 sorting_value = 3;
//  string name_ui = 4;
    string description = 5;
    proto_config config_node = 6;
    repeated proto_config_tree list_configs = 7;
}
/** 
 * @exclude
 * ####################################### D A T A  T Y P E ##########################################
 */
// @base : ViewModelValidatableWithSeverity<DataType, DataType.DataTypeValidator>
message proto_data_type {
    enum EnumDataType {
        STRING = 0;
        NUMERICAL = 1;
        BOOL = 5;

        CONSTANT = 7;
        ENUMERATION = 8;
        CATALOG = 9;
        CATALOGS = 10;
        DOCUMENT = 11;
        DOCUMENTS = 12;

        Any = 15;
    }
    // @attr [PropertyOrderAttribute(2)]
    EnumDataType data_type_enum = 1; 
    // @attr [PropertyOrderAttribute(3)]
    uint32 length = 2; 
    // @attr [PropertyOrderAttribute(4)]
    uint32 accuracy = 3; 
    // @attr [PropertyOrderAttribute(5)]
    bool is_positive = 4; 
    string object_guid = 5;
    string min_value_string = 6;
    string max_value_string = 7;
    // @attr [PropertyOrderAttribute(6)]
    string object_name = 8;
}
/** 
 * @exclude
 * ####################################### P R O P E R T Y ##########################################
 */
/*
message proto_object_shared_props {
    string guid = 1;
    string name = 2;
    uint64 sorting_value = 3;
    string name_ui = 4;
    string description = 5;
}*/

message proto_group_property_tab {
//    proto_object_shared_props shared = 1;
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_property list_properties = 6;
}
message proto_group_property_tabs {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_group_property_tabs_tree list_properties_tabs = 6;
}
message proto_group_property_tabs_tree {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    proto_group_property_tab list_properties_tab = 6;
    proto_group_property_tabs list_properties_sub_tabs = 7;
}

message proto_group_list_properties {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_property list_properties = 6;
}
message proto_property {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    // @attr [ExpandableObjectAttribute()]
    proto_data_type data_type = 6;
}
message proto_group_properties_tree {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_group_properties_tree list_properties_tree_groups = 6;
    proto_group_list_properties group_properties = 7;
}
/** 
 * @exclude
 * ####################################### C O N S T A N T ##########################################
 */
message proto_group_list_constants {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_constant list_constants = 6;
}
//
// Constant application wise value
//#[test-class]
message proto_constant {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    // @attr [PropertyOrderAttribute(4)][ExpandableObjectAttribute()]
    proto_data_type data_type = 6;
}
/** 
 * @exclude
 * ####################################### E N U M E R A T I O N ##########################################
 */
  message proto_group_list_enumerations {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_enumeration list_enumerations = 6;
}
message proto_enumeration {
    enum EnumEnumerationType {
        STRING = 0;
        BYTE = 1;
        SHORT = 2;
        INTEGER = 3;
    }
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    // @attr [PropertyOrderAttribute(4)]
    EnumEnumerationType data_type_enum = 6; 
    repeated proto_enumeration_pair list_values = 7;
}
message proto_enumeration_pair {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    // TODO struct for different types, at least INTEGER
    string value = 6;
}
/** 
 * @exclude
 * ####################################### C A T A L O G ##########################################
 */
message proto_catalog {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;

    // @attr [ExpandableObjectAttribute()]
    id_db_generator id_db_generator = 10;

    proto_group_list_properties group_properties = 15;
    proto_group_list_forms group_forms = 17;
    proto_group_list_reports group_reports = 18;
    proto_group_list_catalogs group_sub_catalogs = 19;
}
message proto_group_list_catalogs {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_catalog list_catalogs = 7;
}
/** 
 * @exclude
 * ####################################### D O C U M E N T ##########################################
 */
message proto_group_documents {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    proto_group_list_properties group_shared_properties = 6;
    proto_group_list_documents group_list_documents = 7;
}
message proto_document {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    proto_group_properties_tree group_properties_tree = 6;
    proto_group_list_forms group_forms = 17;
    proto_group_list_reports group_reports = 18;
    // @attr [ExpandableObjectAttribute()]
    id_db_generator id_db_generator = 10;
}
message proto_group_list_documents {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    repeated proto_document list_documents = 6;
}
/** 
 * @exclude
 * ####################################### J O U R N A L ##########################################
 */
message proto_group_list_journals {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    //repeated proto_property list_shared_properties = 6;
    repeated proto_journal list_journals = 7;
}
message proto_journal {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    //repeated proto_group_properties list_properties = 6;
    repeated proto_document list_documents = 7;
}
/** 
 * @exclude
 * ####################################### F O R M S ##########################################
 */
message proto_group_list_forms {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    //repeated proto_property list_shared_properties = 6;
    repeated proto_form list_forms = 7;
}
message proto_form {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    //repeated proto_group_properties list_properties = 6;
    //repeated proto_document list_forms = 7;
}
/** 
 * @exclude
 * ####################################### R E P O R T S ##########################################
 */
message proto_group_list_reports {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    //repeated proto_property list_shared_properties = 6;
    repeated proto_report list_reports = 7;
}
message proto_report {
    string guid = 1;
    // @attr [PropertyOrderAttribute(1)]
    string name = 2;
    uint64 sorting_value = 3;
    // @attr [PropertyOrderAttribute(2)]
    string name_ui = 4;
    // @attr [PropertyOrderAttribute(3)]
    string description = 5;
    //repeated proto_group_properties list_properties = 6;
    //repeated proto_document list_documents = 7;
}
/** 
 * @exclude
 * ####################################### N U L L A B L E ##########################################
 */
// all simple nullable (generator check suffics '_nullable')
message bool_nullable {
    bool has_value = 1;
    bool value = 2;
}
message string_nullable {
    bool has_value = 1;
    string value = 2;
}
